# FfmpegBuild

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FfmpegMusic.cpp  FfmpegMusic.h  native-lib.cpp  native-lib.h
app/src/main/java/com/example/ffpengbuild/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
